<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Studium_test</string>
    <string name="hello_world">Studium_test</string>
    <string name="UserName">Username:</string>
    <string name="Password">Password:</string>
    <string name="Login">Login</string>
    <string name="RegisterHere">No account yet\? Click here.</string>
    <string name="profilePicture">Select a profile picture:</string>
    <string name="Register">Register</string>
    <string name="postings">Postings</string>
    <string name="friend">Friends</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="Title">Title</string>
    <string name="Content">Content</string>
    <string name="Failed">Failed! Please try again!</string>
    <string name="Type">Type</string>
    <string name="Computing">Computing</string>
    <string name="JavaProgramming">Java Programming</string>
    <string name="CSProgramming">C++ Programming</string>
    <string name="CPProgramming">C# Programming</string>
    <string name="AndroidProgramming">Android Programming</string>
    <string name="Back">Back</string>
    <string name="Post">Post</string>
    <string name="showUserName">UserName\:</string>
    <string name="Success">Succeed!</string>
    <string name="PostedBy">PostedBy</string>
    <string name="AuthorName">AuthorName</string>
    <string name="Reply">Replies</string>
    <string name="Add">Add</string>
    <string name="addFriend">Add</string>
    <string name="friendList">Friends List</string>
    <string name="search">Search</string>
    <string name="addByUsername">Username to add...</string>
    <string name="searchFilters">Search Filters</string>
    <string name="searchByAuthor">Search By Author</string>
    <string name="inputAuthorName">Name of Author</string>
    <string name="searchByContentType">Search By Content Type</string>
    <string name="searchResult">Search Results</string>
    <string name="currentStatus">Current Status</string>
    <string name="sumPosting">Total Posts</string>
    <string name="sumReply">Total Replies</string>
    <string name="changeProfile">Change Profile</string>
    <string name="signOut">Sign Out</string>
    

</resources>
