<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="5dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="5dp" >

    <TextView
        android:id="@+id/Title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Title"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/Title_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Title_textview"
        android:layout_marginBottom="15dp" />

    <TextView
        android:id="@+id/Content_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Title_edittext"
        android:text="@string/Content"
        android:textSize="15sp" />

    <ScrollView
        android:id="@+id/SCROLLER_ID"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_below="@id/Content_textview"
        android:layout_centerHorizontal="true"
        android:fillViewport="true"
        android:paddingBottom="15dp"
        android:scrollbars="vertical" >

        <EditText
            android:id="@+id/Content_edittext"
            android:layout_width="fill_parent"
            android:layout_height="180dp"
            android:layout_weight="1.0"
            android:gravity="top|start"
            android:lineSpacingMultiplier="1.0"
            android:maxHeight="450dp"
            android:textSize="15sp" />
    </ScrollView>

    <TextView
        android:id="@+id/Type_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/SCROLLER_ID"
        android:text="@string/Type"
        android:textSize="15sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Type_textview"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/Computing" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/JavaProgramming" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/CPProgramming" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/CSProgramming" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/AndroidProgramming" />
    </RadioGroup>

    <Button
        android:id="@+id/Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radioGroup"
        android:layout_marginTop="5dp"
        android:text="@string/Back" />

    <Button
        android:id="@+id/Post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Back"
        android:layout_alignParentRight="true"
        android:layout_below="@id/radioGroup"
        android:layout_marginTop="5dp"
        android:text="@string/Post" />

</RelativeLayout>