<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/addByUsername"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/addByUsername" />

        <Button
            android:id="@+id/addFriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addFriend" />
    </LinearLayout>

    <TextView
        android:id="@+id/friendList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/friendList"
        android:textSize="20dp" />

    <com.example.studium_test.ConstraintHeightListView
        android:id="@+id/list_friend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:maxHeight="350dp" />

</LinearLayout>