<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    tools:context="${relativePackage}.${activityClass}" >

    <!-- Username -->

    <TextView
        android:id="@+id/UserName_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/UserName_edittext"
        android:text="@string/UserName"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/UserName_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/UserName_textview" />

    <!-- Password -->

    <TextView
        android:id="@+id/Password_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Password_edittext"
        android:layout_below="@id/UserName_edittext"
        android:layout_marginTop="10dp"
        android:text="@string/Password"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/Password_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/UserName_edittext"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/Password_textview" />

    <!-- Remember me? -->

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Password_edittext"
        android:layout_marginTop="10dp"
        android:checked="true"
        android:text="Hide Password" />

    <!-- Login button -->

    <Button
        android:id="@+id/Login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkBox1"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:padding="12dp"
        android:text="@string/Login" />

    <!-- Register link -->

    <TextView
        android:id="@+id/Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Login"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/RegisterHere" />

</RelativeLayout>